force-app/main/default/objects/HoldOut_Dictionary__c/HoldOut_Dictionary__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Hold Out reasons and controlling attributes used in code</description>
    <label>HoldOut Dictionary</label>
</CustomObject>