force-app/main/default/objects/HoldOut_Dictionary__c/fields/Max_Employees__c.field-meta.xml
<CustomField>
    <fullName>Max_Employees__c</fullName>
    <label>Max Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>