force-app/main/default/objects/HoldOut_Dictionary__c/fields/Min_Employees__c.field-meta.xml
<CustomField>
    <fullName>Min_Employees__c</fullName>
    <label>Min Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>