force-app/main/default/objects/HoldOut_Dictionary__c/fields/Next_HO_reason__c.field-meta.xml
<CustomField>
    <fullName>Next_HO_reason__c</fullName>
    <description>when Opty is marked Sold, change HO Permanent reason to this</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>when Opty is Sold, change HO Permanent reason to this</inlineHelpText>
    <label>Next HO reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>