force-app/main/default/objects/HoldOut_Dictionary__c/fields/Not_Sold_clears_Hold_Out__c.field-meta.xml
<CustomField>
    <fullName>Not_Sold_clears_Hold_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when Opty is marked Not Sold, clear Hold Out flag</description>
    <inlineHelpText>when Opty marked Not Sold, clear Hold Out flag</inlineHelpText>
    <label>Not Sold clears Hold Out</label>
    <type>Checkbox</type>
</CustomField>