force-app/main/default/objects/HoldOut_Dictionary__c/fields/Permanent__c.field-meta.xml
<CustomField>
    <fullName>Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if this HO reason cannot overwritten, changed or cleared out</inlineHelpText>
    <label>Permanent</label>
    <type>Checkbox</type>
</CustomField>