force-app/main/default/objects/HoldOut_Dictionary__c/fields/ProductGroupSelected__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupSelected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma separated list of product groups we&apos;d evaluate for this.</inlineHelpText>
    <label>ProductGroupSelected</label>
    <length>70</length>
    <type>Text</type>
</CustomField>