force-app/main/default/objects/HoldOut_Dictionary__c/fields/Sold_clears_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_clears_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when Opty is marked Sold, clear the Hold Out Expiration Date</description>
    <inlineHelpText>when Opty is Sold, clear the Expiration Date</inlineHelpText>
    <label>Sold clears Expiration Date</label>
    <type>Checkbox</type>
</CustomField>