force-app/main/default/objects/HoldOut_Dictionary__c/fields/SoldExtendsHoldout__c.field-meta.xml
<CustomField>
    <fullName>SoldExtendsHoldout__c</fullName>
    <inlineHelpText>If a sold opportunity extends a holdout, this will be the number of days for that holdout.</inlineHelpText>
    <label>Sold Extends Holdout</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>