force-app/main/default/objects/HoldOut_Dictionary__c/fields/Use_Opty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Use_Opty_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if Acct owner should be set to Opty owner</inlineHelpText>
    <label>Use Opty Owner</label>
    <type>Checkbox</type>
</CustomField>