force-app/main/default/objects/HoldOut_Dictionary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permanent__c</columns>
    <columns>Use_Opty_Owner__c</columns>
    <columns>Sold_clears_Expiration_Date__c</columns>
    <columns>Not_Sold_clears_Hold_Out__c</columns>
    <columns>SoldExtendsHoldout__c</columns>
    <columns>Next_HO_reason__c</columns>
    <columns>InitialNbrDays__c</columns>
    <columns>SalesDivisionsToSet__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>PreventCrossover__c</columns>
    <columns>ProductGroupSelected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>